# libfoot

./: .gitignore  .pre-commit-config.yaml  Cargo.toml  LICENSE  README.md  justfile  pyproject.toml
.cursor/rules/: python.mdc  testing.mdc
.github/workflows/: CI.yml  lint.yml  test.yml
examples/: demo.py  rich_demo.py
python/libfoot/: __init__.py  _libfoot.pyi  cli.py  display.py  types.py
src/: analyzer.rs  cache.rs  lib.rs  package.rs
tests/: README.md  conftest.py  test_analyzer.py  test_cache.py  test_cli.py  test_env_vars.py  test_libfoot.py  test_metadata.py
tests/extras/: __init__.py  test_display.py
