[package]
name = "libfoot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "libfoot"
crate-type = ["cdylib"]

[dependencies]
once_cell = "1.21.3"
pyo3 = "0.24.0"
reqwest = { version = "0.12.15", features = ["blocking", "json"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tempfile = "3.19.1"
zip = "0.6.6"
openssl = { version = "0.10", features = ["vendored"] }
