[build-system]
requires = ["maturin>=1.8,<2.0"]
build-backend = "maturin"

[project]
name = "libfoot"
description = "simple tool to summarize the footprint of a python package"
license = { file = "LICENSE" }
readme = "README.md"
repository = "https://github.com/zzstoatzz/libfoot"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]
dynamic = ["version"]

[project.optional-dependencies]
display = ["rich>=13.0"]

[dependency-groups]
dev = ["maturin", "ruff", "ipython", "pre-commit", "pytest"]

[tool.maturin]
features = ["pyo3/extension-module"]
python-source = "python"
module-name = "libfoot._libfoot"
bindings = "pyo3"


[tool.pytest]
testpaths = ["tests"]
python_files = "test_*.py"

[tool.ruff.lint]
extend-select = ["I", "UP"]
